# HI4Lines_Insp

./: .gitignore  Makefile  README.md  START_TRAINING.sh  citation.cff  coop_acc.py  data_m1.yaml  optimizer.py  pyproject.toml  requirements.txt  serv.py  tnr.py  visualizer.py  weightwatcher.py  yolo2coco.py
Classifier_Model_Hyperparameter_Tuning/: README.md  main_base_optuna.py  train_base.py  train_fmfp.py
Dataset_Creation/: README.md  og2yolo.py
Hyperparameter_Tuning/: custom_data.py
Inference/: README.md  class_eval.py  pipeline_1.py  server_raspi.py
Training_and_Hyperparameter_Tuning/: README.md  SERVER_THRES.py  main_base_optuna.py  main_fmfp_optuna.py  mover.py  swap.py
configs/: base.yaml  data.yaml  data_m1.yaml  data_rpi.yaml  fmfp.yaml  hw_classifier.yaml  hw_eval_server.yaml  hw_eval_server_st.yaml  optimizer.yaml  quantization_config.yaml
deploy/: Makefile  README.md  classification_eval.py  detect_eval.py  detect_image_simplified.py  detect_video.py  detection_eval.py  metric.py  plot.py  requirements.txt  run_pipeline.py
deploy/rpi/: pyproject.toml  requirements.txt
deploy/rpi/deploy/: DEMO.py  class_eval.py  class_eval_src.py  detect_eval_src.py  hist_plot.py  kde_plot.py  make_data_for_persample_evaluation.py  metric.py  mixed_plot.py  new_kde_plot.py  og2yolo.py  run_classifier_evaluator_server.py
hailo_src/: ckpt2onnx.py  ckpt2onnx_mobilenet.py  ckpt2onnx_v2.py  compiler.py  optimizer.py  parser.py  requirements.txt  server.py  server_noserver.py  server_noserver_best.py
hi4lines_insp/: README.md  aaa.db  aeaea.db  akak.db  apa.db  (+22 more)
(+2576 files in other folders)
