[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hi4lines_insp"
version = "0.0.1"
description = "description_too"
authors = [
  { name = "alema416" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.9.0"


[tool.ruff]
line-length = 99
src = ["hi4lines_insp"]
include = ["pyproject.toml", "hi4lines_insp/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["hi4lines_insp"]
force-sort-within-sections = true

